--- a/hawc/apps/hawc_admin/templates/admin/fragments/assessment_growth.html
+++ b/hawc/apps/hawc_admin/templates/admin/fragments/assessment_growth.html
@@ -1,6 +1,6 @@
 <h2>Top assessments</h2>
 <p>Top 20 assessments with the most changes within in the last 180 days.</p>
-{{matrix|safe}}
+{% if matrix %}{{matrix|safe}}{% else %}<p class="errornote">Matrix cannot be generated - an error occurred.</p>{% endif %}
 
 <div style="height: 200vh">
 {% include 'admin/fragments/assessment_profile.html' %}
