--- a/hawc/apps/summary/templates/summary/datapivot_update_settings.html
+++ b/hawc/apps/summary/templates/summary/datapivot_update_settings.html
@@ -36,20 +36,20 @@
 {% endblock dp_content %}
 
 {% block extrajs %}
-  <script type="text/javascript">
-  $('#loading_div').html(window.app.HAWCUtils.loading())
-  window.app.startup("dataPivotStartup", function(app){
-      var data_url = '{{object.get_data_url|safe}}',
-          settings = {{object.settings|safe}},
-          options = {
-              container: '#data_pivot',
-              dataDiv: '#dp_data',
-              settingsDiv: '#dp_settings',
-              displayDiv: '#dp_display',
-              submissionDiv: '#dp_settings_form',
-              settingsField: '#id_settings',
-          };
-      app.DataPivot.displayEditView(data_url, settings, options)
-  });
-  </script>
+{{ config|json_script:"dp-config" }}
+<script type="text/javascript">
+$('#loading_div').html(window.app.HAWCUtils.loading())
+window.app.startup("dataPivotStartup", function(app){
+  const config = JSON.parse(document.getElementById('dp-config').textContent),
+    options = {
+      container: '#data_pivot',
+      dataDiv: '#dp_data',
+      settingsDiv: '#dp_settings',
+      displayDiv: '#dp_display',
+      submissionDiv: '#dp_settings_form',
+      settingsField: '#id_settings',
+    };
+  app.DataPivot.displayEditView(config.data_url, config.settings, options)
+});
+</script>
 {% endblock extrajs %}
