--- a/hawc/static/css/epa-hawc.css
+++ b/hawc/static/css/epa-hawc.css
@@ -94,3 +94,7 @@ a.dropdown-toggle:not([href])::after {
 .dataTables_filter [type="search"]{
     float: none;
 }
+
+.abstracts {
+    font-family: unset;
+}
