--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -1,4 +1,4 @@
-<div id="tagged-ref-{{ref.pk}}">
+<div id="tagged-ref-{{ref.pk}}" class="referenceDetail">
     {% if show_actions %}
     <div class="dropdown btn-group float-right">
         <a class="btn btn-sm btn-secondary dropdown-toggle" data-toggle="dropdown">Actions</a>
@@ -9,16 +9,27 @@
         </div>
     </div>
     {% endif %}
-    <div>
-        <div class="ref_authors cursor-pointer ref_small mb-1">{{ref.authors}} {{ref.year}}</div>
-        <div class="ref_title cursor-pointer m-0">{{ref.title}}</div>
-        <div class="ref_small mb-1">
+    <div class="html-referenceDetail">
+        <div class="ref_authors ref_small mb-1">{{ref.authors}} {{ref.year}}</div>
+        <div class="ref_title m-0">{{ref.title}}</div>
+        <div class="d-flex my-1">
             {% for id in ref.identifiers.all %}
-            <a href="{{id.get_url}}" class="ids badge badge-info">{{id.get_database_display}}</a>
+            {% if id.get_url %}
+            <div class="d-flex mr-1 mb-1 flex-shrink-0">
+                <a class="outline-btn left" href="{{id.get_url}}">{{id.get_database_display}}</a>
+                <div class="outline-btn right">{{id.unique_id}}</div>
+            </div>
+            {% endif %}
             {% endfor %}
-            <a href="{{ref.get_absolute_url}}" class="ids badge badge-warning">HAWC</a>
+            <div class="d-flex mr-1 mb-1 flex-shrink-0">
+                <a class="outline-btn left" href="{{ref.get_absolute_url}}"> <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp;HAWC</a>
+                <div class="outline-btn right" {% if ref.has_study %} style="border-radius: 0px;" {% endif %}>{{ref.id}}</div>
+                {% if ref.has_study %}
+                <a class="outline-btn right" href="{{ref.study.get_absolute_url}}"> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;Study</a>
+                {% endif %}
+            </div>
         </div>
-        <p class="abstract abstract_collapsed cursor-pointer mb-1" title="Click to expand/collapse">{{ref.abstract|safe}}</p>
+        <p class="abstracts abstract-collapsed  mb-1" title="Click to expand/collapse">{{ref.abstract|safe}}</p>
     </div>
     <div>
         {% with ref.tags.all as tags %}{% if tags %}
@@ -68,8 +79,8 @@
 <script type="text/javascript">
 {% comment %}jQuery not available when script is inserted, but available when events are triggered{% endcomment %}
 document.querySelectorAll(
-    "#tagged-ref-{{ref.pk}} .abstract, #tagged-ref-{{ref.pk}} .ref_authors, #tagged-ref-{{ref.pk}} .ref_title"
+    ".abstracts"
 ).forEach(
-    el => el.addEventListener('click', e => $(e.target).closest('#tagged-ref-{{ref.pk}}').find('.abstract').toggleClass("abstract_collapsed"))
+    el => el.addEventListener('click', e => $(e.target).closest('#tagged-ref-{{ref.pk}}').find('.abstracts').toggleClass("abstract-collapsed"))
 );
 </script>
