--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -75,6 +75,9 @@ tfoot > tr > td {
     overflow-y: auto;
     resize:vertical;
 }
+.clickable {
+    transition: background-color 0.15s ease;
+}
 .clickable:hover {
     cursor: pointer;
     background-color: #f3f3f3;
@@ -413,6 +416,7 @@ div.smart-tag.active {
     font-size: 0.8465em;
     display: block;
     margin: 0;
+    color: #555555;
 }
 .ref_title {
     margin: 0;
@@ -420,20 +424,6 @@ div.smart-tag.active {
     line-height: 1.4;
     color: #1b1b1b;
     font-family: Source Sans Pro Web, "Noto Sans Arabic", "Noto Sans BN homepage", "Noto Sans GU homepage", "Noto Sans KR homepage", "Noto Sans SC homepage", "Noto Sans BN", "Noto Sans GU", "Noto Sans KR", "Noto Sans SC", "Noto Sans TC", "Helvetica Neue", Helvetica, Arial, sans;
-}
-.refTag {
-    color: #ffffff !important;
-    background-color: #162e51;
-    border-radius: 10px;
-    border: 0.15rem dotted transparent;
-    padding: 4px 7px 4px 7px;
-    margin: 0 5px 7px 0;
-    display: inline-block;
-}
-.refUserTag {
-    color: #162e51 !important;
-    background-color: #ffffff;
-    border: 0.15rem dotted #162e51;
 }
 .referenceTag{
     text-align: left;
@@ -494,10 +484,14 @@ div.smart-tag.active {
 }
 .tagHover:hover, .tagSelected {
     font-weight: bold;
+    font-style: italic;
 }
 
 .tagSelected {
-    text-decoration: underline;
+    background-color: #747474;
+    color: white;
+    border-radius: 5px;
+    font-style: normal !important;
 }
 .reference {
     border-bottom: 3px solid lightgray;
@@ -524,35 +518,18 @@ div.smart-tag.active {
 .conflict-reference-li {
     border-bottom: 5px solid #b0b0b0 !important;
 }
-
-.referenceDetail {
-    max-width: 75vw;
-}
-.referenceDetail.expanded {
-    max-width: unset;
-}
-.referenceDetail>div.d-flex, .referenceDetail>p {
-    padding-left: 8px;
-}
-.referenceDetail.expanded>div.d-flex, .referenceDetail.expanded>p {
-    padding-left: unset;
-}
-.referenceDetail>hr{
-    margin: 25px 0;
-}
 .abstracts {
     font-size: 0.95rem;
     font-family: BlinkMacSystemFont,-apple-system,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     line-height: 1.45rem;
     height: 15rem;
     display: block;
-    cursor: pointer;
     background-color: #f8f8f8;
     transition: all 0.15s ease-out;
     overflow-y: scroll;
     cursor: pointer;
     margin: 3px 0px;
-    padding-left: 3px;
+    padding-left: 3px !important;
     margin-left: 8px;
 }
 .abstract-collapsed {
@@ -561,9 +538,24 @@ div.smart-tag.active {
     height: 4.6rem;
     background-color: #ffffff;
     padding-right: 20px;
-    padding-left: 0px;
+    padding-left: 0px !important;
 }
-
+.vw75 {
+    max-width: 75vw;
+}
+.referenceDetail>div, .referenceDetail>p {
+    padding-left: 8px;
+}
+.referenceDetail.expanded>div, .referenceDetail.expanded>p {
+    padding-left: unset;
+}
+.referenceDetail>hr{
+    margin: 25px 0;
+}
+.referenceDetail.expanded .ref_title {
+    font-size: 1.35rem;
+    text-shadow: 0 0 0 black;
+}
 .referenceDetail.expanded .abstracts {
     height: fit-content;
     cursor: unset;
@@ -571,85 +563,34 @@ div.smart-tag.active {
     line-height: unset;
     background-color: unset;
     overflow-y: unset;
-    padding: unset;
+    padding: unset !important;
     margin: unset;
 }
 .html-referenceDetail .abstracts {
     margin: unset;
 }
 .abstracts:hover {
-    background-color: #f3f3f3;
+    background-color: #f8f8f8;
 }
 .abstract-collapsed:hover {
-    padding-left: 3px;
+    padding-left: 3px !important;
     padding-right: 17px;
 }
-.referenceDetail.expanded .abstracts:hover {
-    background-color: unset;
+.refTag {
+    color: #ffffff !important;
+    background-color: #162e51;
+    border-radius: 10px;
+    border: 0.1rem dotted transparent;
+    padding: 2px 5px;
+    margin: 0 10px 14px 0;
+    display: inline-block;
+    font-size: 0.95rem;
 }
-.tagLink:hover {
-    text-decoration: none;
-    background-color: #29559c;
+.refUserTag {
+    color: #162e51 !important;
+    background-color: #ffffff;
+    border: 0.1rem dotted #162e51;
 }
-.tagLink {
-    transition: background-color 0.15s ease-out;
-    font-size: 0.85rem;
-    padding: 2px 4px;
-    margin: 0 4px 3px 0;
-}
-.referenceDetail.expanded .tagLink {
-    font-size: 1rem;
-    padding: 4px 7px;
-    margin: 0 5px 7px 0;
-}
-.outline-btn {
-    padding: 0.25em 0.4em;
-    font-size: 0.75rem;
-    height: fit-content;
-    line-height: 0.8rem !important;
-    color: #666666 !important;
-    border: 1px solid #666666 !important;
-    border-radius: 4px;
-    margin-bottom: 2px;
-    transition: all 0.15s ease;
-}
-
-.outline-btn i {
-    line-height: 0.8rem;
-}
-.referenceDetail.expanded .outline-btn, .referenceDetail.expanded .outline-btn .dropdown-toggle {
-    font-size: 0.9rem;
-    padding: 0.3rem 0.5rem;
-}
-.referenceDetail.expanded .dropdown.outline-btn {
-    padding: 0.25rem 0.5rem;
-}
-.referenceDetail.expanded .outline-btn .dropdown-toggle {
-    padding: 0;
-}
-
-.outline-btn.left{
-    border-radius: 4px 0 0 4px;
-}
-.outline-btn.right{
-    border-radius: 0 4px 4px 0;
-    border-left: none !important;
-}
-a.outline-btn, .btn.outline-btn {
-    font-weight: bold;
-}
-a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
-    text-decoration:none;
-    color: black  !important;
-    background-color: #d4d4d4;
-}
-
-
-.list-item-clicked,
-.list-item-clicked:hover {
-    background-color: #eeeeee;
-}
-
 .refTagDiff,
 .refTagSame {
     color: #ffffff !important;
@@ -662,15 +603,59 @@ a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
 .refUserTagRemove {
     color: rgb(128,0,0) !important;
     background-color: #ffffff;
-    border: 0.15rem dotted rgb(128,0,0);
+    border: 0.1rem dotted rgb(128,0,0);
     text-decoration: line-through rgba(128,0,0,0.5);
 }
-
 .refTagSame {
-    color: #ffffff !important;
     font-size: 0.85rem;
-    padding: 5px 7px 5px 7px;
     background-color: #7e7e7e;
+}
+.tagLink:hover {
+    text-decoration: none;
+    background-color: #29559c;
+}
+.tagLink {
+    transition: background-color 0.15s ease-out;
+    font-size: 0.85rem;
+    margin: 0 4px 3px 0;
+}
+.referenceDetail.expanded .tagLink {
+    font-size: 1rem;
+    padding: 4px 7px;
+    margin: 0 10px 14px 0;
+}
+.outline-btn {
+    height: fit-content;
+    color: #666666 !important;
+    border: 1px solid #666666 !important;
+    transition: all 0.15s ease;
+    font-weight: bold;
+    line-height: 1;
+    font-size: 0.9rem;
+    padding: 0.3rem 0.3rem;
+    border-radius: 5px;
+}
+a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
+    text-decoration:none;
+    color: black  !important;
+    background-color: #d4d4d4;
+}
+.btn-tny {
+    font-size: 0.75rem;
+    padding: 0.25em 0.4em;
+    line-height: 0.8rem !important;
+    border-radius: 4px;
+    margin-bottom: 2px;
+}
+
+.btn-left {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.btn-right {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: none !important;
 }
 
 /* preview modal icon */
