--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     {% endif %}
-    <div class="html-referenceDetail">
+    <div>
         <div class="ref_authors ref_small mb-1">{{ref.authors}} {{ref.year}}</div>
         <div class="ref_title m-0">{{ref.title}}</div>
         <div class="d-flex my-1">
@@ -29,7 +29,9 @@
                 {% endif %}
             </div>
         </div>
+        {% if ref.abstract %}
         <p class="abstracts abstract-collapsed  mb-1" title="Click to expand/collapse">{{ref.abstract|safe}}</p>
+        {% endif %}
     </div>
     <div>
         {% with ref.tags.all as tags %}{% if tags %}
