--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -524,22 +524,21 @@ div.smart-tag.active {
 .abstracts {
     font-size: 0.95rem;
     line-height: 1.4rem;
+    height: 15rem;
     display: block;
-    overflow-y: scroll;
     cursor: pointer;
+    background-color: #f8f8f8;
+    transition: all 0.15s ease-out;
+    scrollbar-gutter: stable;
+    overflow-y: scroll;
+}
+.abstracts:hover {
+    background-color: #f8f8f8;
 }
 .abstract-collapsed {
-    text-overflow: ellipsis;
     height: 4.2rem;
-}
-.referenceDetail>div, .referenceDetail>p {
-    padding-left: 8px;
-}
-.referenceDetail.expanded>div, .referenceDetail.expanded>p {
-    padding-left: unset;
-}
-.referenceDetail>hr{
-    margin: 25px 0;
+    overflow: hidden;
+    background-color: unset;
 }
 .referenceDetail.expanded .ref_title {
     font-size: 1.35rem;
@@ -548,15 +547,6 @@ div.smart-tag.active {
 .referenceDetail.expanded .abstracts {
     height: fit-content;
     cursor: unset;
-}
-.html-referenceDetail .abstracts {
-    margin: unset;
-}
-.abstract-collapsed {
-    scrollbar-color: transparent transparent;
-}
-.abstract-collapsed::-webkit-scrollbar {
-    background-color: transparent;
 }
 .refTag {
     color: #ffffff !important;
