--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -49,6 +49,10 @@
 }
 /* end sidebar */
 
+.unpublishedBadge+.actionsMenu, .unpublishedBadge+button.close {
+    margin-left: unset !important;
+}
+
 iframe {
     resize: both;
 }
