--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -6,6 +6,7 @@
 {% block content %}
   <div class="d-flex">
     <h2>{{object}}</h2>
+    {% include "common/unpublished_logo.html" %}
     {% if obj_perms.edit %}
       {% actions %}
             <span class="dropdown-header">Study editing</span>
