--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -89,6 +89,10 @@ p {
     margin-bottom: 0rem !important;
 }
 
+select[multiple]{
+    resize: vertical;
+}
+
 /* BOOTSTRAP 4 OVERRIDES */
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
