--- a/hawc/apps/summary/templates/summary/visual_detail_plotly.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_plotly.html
@@ -3,22 +3,18 @@
 {% load bs4 %}
 
 {% block content %}
-<div class="d-flex">
-  <div class='visualization'>
+<div class="visualization">
+  <div class='d-flex'>
     <h2>{{object.title}}</h2>
-    {% plotly object.get_plotly_from_json %}
-    <p>{{object.caption|safe}}</p>
+    {% if obj_perms.edit %}
+      {% actions %}
+        <span class="dropdown-header">Visualization editing</span>
+        <a class="dropdown-item" href="{% url 'summary:visualization_update' assessment.pk object.slug %}">Update</a>
+        <a class="dropdown-item" href="{% url 'summary:visualization_delete' assessment.pk object.slug %}">Delete</a>
+      {% endactions %}
+    {% endif %}
   </div>
-  {% if obj_perms.edit %}
-    {% actions %}
-      <span class="dropdown-header">Visualization editing</span>
-      <a class="dropdown-item" href="{% url 'summary:visualization_update' assessment.pk object.slug %}">
-        Update
-      </a>
-      <a class="dropdown-item" href="{% url 'summary:visualization_delete' assessment.pk object.slug %}">
-        Delete
-      </a>
-    {% endactions %}
-  {% endif %}
+  {% plotly object.get_plotly_from_json %}
+  <p>{{object.caption|safe}}</p>
 </div>
 {% endblock %}
