--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -20,9 +20,7 @@
             {% endif %}
             <a class="dropdown-item" href="{{ object.get_clear_cache_url }}">Clear assessment cache</a>
             <a class="dropdown-item" href="{{ object.get_assessment_logs_url }}">Change logs</a>
-            <a class="dropdown-item" hx-get="{% url 'assessment:attachment-create' object.pk %}"
-            hx-trigger="click" hx-target="#attach_table" hx-swap="outerHTML" href="/">
-            Add an attachment</a>
+            <a class="dropdown-item" hx-get="{% url 'assessment:attachment-create' object.pk %}" hx-trigger="click" hx-target="#attach_table" hx-swap="outerHTML" href="/">Add an attachment</a>
             <a class="dropdown-item" href="{% url 'assessment:dataset_create' object.pk %}">Add a dataset</a>
             <a class="dropdown-item" href="{% url 'assessment:values-create' object.pk %}">Add a value</a>
             <div class="dropdown-divider"></div>
@@ -46,7 +44,7 @@
           {% endif %}
 
           {% if assessment.enable_data_extraction and obj_perms.edit_assessment %}
-          <a class="dropdown-item" href="{% url 'invitro:endpointcategory_update' object.pk %}">Update IV endpoint categories</a>
+          <a class="dropdown-item" href="{% url 'invitro:endpointcategory_update' object.pk %}">In vitro endpoint categories</a>
           {% endif%}
 
           <!-- data cleanup -->
@@ -56,7 +54,7 @@
               {% if assessment.enable_data_extraction %}
               <a class="dropdown-item" href="{% url 'assessment:clean_extracted_data' object.pk %}">Clean extracted data</a>
               {% endif%}
-              {% if assessment.enable_risk_of_bias and obj_perms.edit_assessment %}
+              {% if assessment.enable_risk_of_bias %}
               <a class="dropdown-item" href="{% url 'assessment:clean_study_metrics' pk=object.pk %}">Clean {{object.get_rob_name_display|lower}} responses</a>
               {% endif %}
               <a class="dropdown-item" href="{% url 'assessment:bulk-publish' object.pk %}">Publish items</a>
